# phaser_extended_public

./: .gitmodules  README.md  dependencies.rosinstall
libtorch_peaks/: CMakeLists.txt  README.md  phaser_peaks.cpp  test_time.py
phaser_common/: CMakeLists.txt
phaser_common/include/phaser/common/: core-gflags.h  grid-utils.h
phaser_common/include/phaser/model/: registration-result.h  state.h
phaser_common/src/common/: core-gflags.cc  grid-utils.cc
phaser_common/src/distribution/: bingham.cc
phaser_common/src/model/: registration-result.cc  state.cc
phaser_core/: CMakeLists.txt
phaser_core/include/phaser/backend/registration/: base-registration.h  (+3 more)
phaser_core/include/phaser/controller/: cloud-controller.h
phaser_core/src/backend/alignment/: phase-aligner.cc
phaser_core/src/backend/correlation/: spherical-combined-worker.cc
phaser_core/src/backend/fusion/: laplace-pyramid.cc
phaser_core/src/backend/registration/: sph-opt-multiple-registration.cc  sph-opt-registration.cc  sph-registration.cc
phaser_core/src/backend/uncertainty/: bingham-neighbors-peak-based-eval.cc  bingham-zscore-peak-based-eval.cc  gaussian-neighbors-peak-based-eval.cc  neighbors-eval.cc  neighbors-peak-extraction.cc  phase-correlation-eval.cc  z-score-eval.cc
phaser_core/src/controller/: cloud-controller.cc
phaser_core/test/: driver.cc
phaser_core/test/uncertainty-estimate/: neighbors-peak-test.cc
phaser_deploy/: Dockerfile.phaser  build_docker.sh  copy_to_ctx.sh  install_base.sh  install_packages.sh  install_ros.sh
phaser_share/: run_phaser_core_driver
(+13 files in other folders)
